Add class exceptions, fixed some bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TaDS_Lab2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(TaDS_Lab2 src/main.cpp src/Menu/MenuItem.h src/Menu/MenuItem.cpp src/BinTree/BinTree.cpp src/BinTree/BinTree.h src/BinTree/Node.cpp src/BinTree/Node.h src/Menu/MyMenu.cpp src/Menu/MyMenu.h)
+add_executable(TaDS_Lab2 src/main.cpp src/Menu/MenuItem.h src/Menu/MenuItem.cpp src/BinTree/BinTree.cpp src/BinTree/BinTree.h src/BinTree/Node.cpp src/BinTree/Node.h src/Menu/MyMenu.cpp src/Menu/MyMenu.h src/Exceptions/MyException.h src/Exceptions/MyException.cpp)
